infra/networking.tf
module "networking" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "5.19.0"

  name = "${var.project_name}-vpc"
  cidr = var.vpc_cidr
  azs  = var.azs


  public_subnets       = var.public_subnets
  private_subnets      = var.private_subnets
  private_subnet_names = var.private_subnet_names
  public_subnet_names  = var.public_subnet_names


  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  # Tag all public subnets as web tier
  public_subnet_tags = {
    "Tier" = "web"
  }
}

# Security group for ECS tasks
resource "aws_security_group" "ecs_task_sg" {
  name        = "ritual-roast-ecs-task-sg"
  description = "Security group for ECS tasks through ALB"
  vpc_id      = module.networking.vpc_id

  # Allow inbound HTTP traffic from ALB
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  # Allow inbound SSH access from ALB
  ingress {
    description     = "ssh access"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


# Security group for Application Load Balancer
resource "aws_security_group" "alb_sg" {
  name        = "ritual-roast-alb-sg"
  description = "enable http/https access on port 80 and 443 respectively"
  vpc_id      = module.networking.vpc_id


  # Allow inbound HTTP traffic from anywhere
  ingress {
    description = "http access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow inbound HTTPS traffic from anywhere
  ingress {
    description = "https access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ritual-roast-alb-sg"
  }

}
